--- a/styles/styles.css
+++ b/styles/styles.css
@@ -346,7 +346,7 @@ a{
 }
 
 .tarjetainicio-tres{
-    background-image: url(../assets/Fotorecortadacontacto.png);
+    background-image: url(../assets/contactoinicio.png);
     background-repeat: no-repeat;
     height: 605px;
     width: 420px;
