--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,7 +92,34 @@ a{
 }
 /* CIERRE H1 */
 /* Barra de navegacion */
-@media(min-width:250px) and (max-width:576px){
+.barnav{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.barnav ul{
+    background-color: #a96521bf;
+    border-radius: 20px;
+    /* padding-inline: 25px; */
+}
+.barnav li{
+    padding-inline: 10px;
+}
+.barnav a{
+    color: white;
+    padding: 10px;
+    font-family: 'Saira', sans-serif;
+    font-size: 1rem;
+}
+.barnav a:hover{
+    color: black;
+}
+@keyframes animacion-letra-barnav{
+    
+}
+
+
+/* @media(min-width:250px) and (max-width:576px){
     .barnav {
         display: none;
     }
@@ -166,17 +193,13 @@ a{
     padding: 10px;
     font-family: 'Saira', sans-serif;
     font-size: 1.2rem;
-}
+} */
 /* Cierre barra de navegacion */
 /* COMIENZO DE MAIN*/
-/* carrusel */
-.fotoscarrusel{
-    width: 100%;
-    height: 68vh;
-    background-size:cover;
-    
-}
-/* Cierre de carrusel */
+/* CARRUSEL */
+
+
+/* CIERRE DE CARRUSEL */
 
 /* Comienzo fotos con link a los archivos pag principal */
 /* -----CATEGORIAS INICIO------ */
@@ -379,7 +402,7 @@ a{
 .tarjproductos{
     background-color: gray;
     width: 300px;
-    height: auto;
+    height: 835px;
     display: inline-block;
     margin: 40px;
     font-family: 'Saira', sans-serif;
@@ -410,9 +433,6 @@ a{
     flex-direction: row;
     justify-content: space-around;
 }
-.precio{
-    background-color: #a96521fa;
-}
 .tarjproductos:hover{
     background-color: black;
     color: white;
@@ -439,7 +459,7 @@ form{
 }
 form,div,h1{
     align-items: center;
-    padding: 20px;
+    
 }
 .div-dentro-del-form{
     display: flex;
