--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,14 @@ a{
 }
 
 /* --------------CIERRE DE LOGO ----------*/
+/* ---------CARRUSEL-------- */
+.carrusel-foto{
+    width:100%;
+    height: 90vh;
 
+    
+}
+/*------- CIERRE CARRUSEL----- */
 /* INICIO H1 */
 @media(min-width:250px) and (max-width:382px){
     .h1 h1{
@@ -82,7 +89,6 @@ a{
 .h1{
     background-color: rgba(2, 2, 2, 0.9);
     color:rgba(155, 148, 148, 0.907);
-    font-size: 0.8rem;
     font-family: 'Saira', sans-serif;
     display: flex;
     justify-content: center;
@@ -90,6 +96,9 @@ a{
     height: 100px;
     width: 100%;
 
+}
+.h1 h1{
+    font-size: 1.2rem;
 }
 /* CIERRE H1 */
 /* Barra de navegacion */
