--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,410 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+ul, ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  background-color: rgba(0, 0, 0, 0.779);
+  overflow: auto;
+}
+
+.fondodebarradenav {
+  background-color: coral;
+  background-image: url(../assets/Fotonavajadfondonav.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.barnav {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+}
+.barnav ul {
+  background-color: rgba(169, 101, 33, 0.7490196078);
+  border-radius: 20px;
+}
+.barnav ul li {
+  padding-inline: 10px;
+}
+.barnav ul li a {
+  color: white;
+  padding: 10px;
+  font-family: "Saira", sans-serif;
+  font-size: 1rem;
+}
+
+.barnav__animacion a:hover {
+  color: black;
+  transform: scale(1.2);
+}
+
+@media (min-width: 0px) and (max-width: 992px) {
+  .barnav ul {
+    width: 100%;
+    text-align: center;
+  }
+}
+.categorias-footer {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+}
+.categorias-footer__li a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.3rem;
+}
+
+.bg-color {
+  background-color: rgb(152, 152, 152);
+}
+
+.footer-texto {
+  font-family: "Orbitron", sans-serif;
+}
+
+@media (min-width: 992px) {
+  .footer-h {
+    height: auto;
+  }
+  .footer-contenido {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+}
+.logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+@media (min-width: 250px) and (max-width: 576px) {
+  .logo {
+    width: auto;
+    height: 100px;
+  }
+  .logo img {
+    width: 100px;
+    height: 60px;
+  }
+  .contenedorLogo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
+@media (min-width: 576px) and (max-width: 1023px) {
+  .contenedorLogo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .logo img {
+    width: 190px;
+  }
+}
+.h1 {
+  background-color: rgba(2, 2, 2, 0.9);
+  color: rgba(155, 148, 148, 0.907);
+  font-size: 0.8rem;
+  font-family: "Saira", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+}
+
+@media (min-width: 250px) and (max-width: 382px) {
+  .h1 h1 {
+    font-size: 0.8rem;
+    display: inline;
+    justify-content: center;
+  }
+}
+@media (min-width: 382px) and (max-width: 576px) {
+  .h1 h1 {
+    font-size: 0.8rem;
+    display: inline;
+    justify-content: center;
+  }
+}
+.textoh1 {
+  text-align: center;
+  color: white;
+  background-color: rgba(22, 22, 22, 0.693);
+  padding: 10px;
+  font-family: "Saira", sans-serif;
+  border: 5px solid rgb(173, 96, 18);
+}
+
+.h2categoriasinicio {
+  font-family: "Saira", sans-serif;
+  text-align: center;
+  font-size: 2rem;
+  color: white;
+  padding: 15px;
+  border-radius: 20px;
+  background-color: rgba(169, 101, 33, 0.7490196078);
+}
+@media (min-width: 250px) and (max-width: 576px) {
+  .h2categoriasinicio {
+    margin-top: 5px;
+    font-size: 0.5rem;
+  }
+  main .h2categoriasinicio {
+    font-size: 1.3rem;
+  }
+}
+
+.textoh2 {
+  text-align: center;
+  color: white;
+  font-family: "Saira", sans-serif;
+  background-color: rgb(173, 96, 18);
+}
+
+.btnestilo {
+  background-color: rgba(169, 101, 33, 0.7490196078);
+  border: 3px solid rgba(0, 0, 0, 0.54);
+}
+
+.productos {
+  color: white;
+  font-size: 2rem;
+  font-family: "Saira", sans-serif;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.244);
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.tarjproductos {
+  background-color: gray;
+  font-family: "Saira", sans-serif;
+  height: auto;
+  border-radius: 5px;
+}
+.tarjproductos h4 {
+  font-size: 0.9rem;
+}
+
+.fotofondocontacto {
+  background-image: url(../assets/fotocontactofondo01.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+form {
+  color: white;
+  font-family: "Saira", sans-serif;
+  height: auto;
+  width: auto;
+  margin: 0 auto;
+  padding: 2rem;
+  background: rgba(128, 128, 128, 0.49);
+}
+form div h1 {
+  align-items: center;
+}
+
+.div-dentro-del-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contacto-form {
+  padding: 0;
+  margin: 15px;
+  display: flex;
+  gap: 15px;
+}
+
+.formcontacto {
+  height: auto;
+  width: 400px;
+}
+
+.btnform {
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: rgba(225, 85, 85, 0.615);
+  width: 200px;
+  padding: 10px;
+}
+
+.categoriasinicio {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 30px;
+}
+
+@media (min-width: 250px) and (max-width: 700px) {
+  main .categoriasinicio {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+  main .tarjetainicio {
+    width: 300px;
+    height: 500px;
+  }
+  main .tarjetainicio-dos {
+    width: 300px;
+    height: 500px;
+  }
+  main .tarjetainicio-tres {
+    width: 300px;
+    height: 500px;
+  }
+  main .tarjetainicio-cuatro {
+    width: 300px;
+    height: 500px;
+  }
+  main .botontarjetainicio {
+    font-size: 1.5rem;
+  }
+  main .botontarjetainicio-dos {
+    font-size: 1.3rem;
+    width: 200px;
+  }
+}
+@media (min-width: 576px) and (max-width: 930px) {
+  main .categoriasinicio {
+    padding: 10px;
+    margin: 10px;
+  }
+  main .tarjetainicio {
+    width: 290px;
+    height: 500px;
+  }
+  main .tarjetainicio-dos {
+    width: 290px;
+    height: 500px;
+  }
+  main .tarjetainicio-tres {
+    width: 290px;
+    height: 500px;
+  }
+  main .tarjetainicio-cuatro {
+    width: 290px;
+    height: 500px;
+  }
+  main .botontarjetainicio {
+    font-size: 1.3rem;
+  }
+  main .botontarjetainicio-dos {
+    font-size: 1.3rem;
+    width: 200px;
+  }
+}
+.tarjetainicio {
+  background-image: url(../assets/Fotorecortadamaquina.png);
+  background-repeat: no-repeat;
+  height: 605px;
+  width: 420px;
+  border: 3px solid gray;
+}
+.tarjetainicio a {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.botontarjetainicio {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  background-color: white;
+  border: 5px solid gray;
+  height: auto;
+  width: 200px;
+  margin-block-end: 40px;
+  font-family: "Saira", sans-serif;
+}
+.botontarjetainicio:hover {
+  border: 5px solid rgb(255, 255, 255);
+  color: white;
+  background-color: rgb(0, 0, 0);
+}
+
+.tarjetainicio-dos {
+  background-image: url(../assets/Fotorecortadatijenav.png);
+  background-repeat: no-repeat;
+  height: 605px;
+  width: 420px;
+  border: 3px solid gray;
+}
+.tarjetainicio-dos a {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.botontarjetainicio-dos {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  background-color: white;
+  border: 5px solid gray;
+  height: auto;
+  width: 300px;
+  margin-block-end: 40px;
+  font-family: "Saira", sans-serif;
+}
+.botontarjetainicio-dos:hover {
+  border: 5px solid rgb(255, 255, 255);
+  color: white;
+  background-color: rgb(0, 0, 0);
+}
+
+.tarjetainicio-tres {
+  background-image: url(../assets/iniciocontacto.png);
+  background-repeat: no-repeat;
+  height: 605px;
+  width: 420px;
+  border: 3px solid gray;
+}
+.tarjetainicio-tres a {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.tarjetainicio-cuatro {
+  background-image: url(../assets/Fotorecortadaaccesorioswss.png);
+  background-repeat: no-repeat;
+  height: 605px;
+  width: 420px;
+  border: 3px solid gray;
+}
+.tarjetainicio-cuatro a {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
 
 /*# sourceMappingURL=styles.css.map */
