contacto responsive y arreglo de sass

--- a/scss/layout/_logo.scss
+++ b/scss/layout/_logo.scss
@@ -7,11 +7,11 @@
     .logo{
         width: auto;
         height: 100px;
-    }
-    .logo img{
+    img{
         width: 100px;
         height: 60px;
     }
+}
     .contenedorLogo{
         display: flex;
         flex-direction: row;
