--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 // layout
 @import "layout/barranav";
 @import "layout/footer";
+@import"layout/form";
 @import "layout/logo";
 @import "layout/titulos";
 
