--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,4 +4,25 @@
     border: 3px solid rgba(0, 0, 0, 0.54);
 }
 // cierre de btn barra de navegacion
-
+// btn de tarjeta
+.btnTarjeta{
+    background-color:rgb(0, 0, 0);
+    color :white;
+}
+.btnDeTarjetas{
+    background-color: #a96521bf;
+    height: 50px;
+    width: 60%;
+    border-radius: 15px;
+    color: white;
+    
+}
+.popover-header{
+    background-color: #a96521bf;
+    color: white;
+}
+.popover-body{
+    background-color: rgba(102, 101, 101, 0.565);
+    color: rgb(0, 0, 0);
+}
+// cierre
