--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,6 +210,29 @@ form div h1 {
   border: 3px solid rgba(0, 0, 0, 0.54);
 }
 
+.btnTarjeta {
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+.btnDeTarjetas {
+  background-color: rgba(169, 101, 33, 0.7490196078);
+  height: 50px;
+  width: 60%;
+  border-radius: 15px;
+  color: white;
+}
+
+.popover-header {
+  background-color: rgba(169, 101, 33, 0.7490196078);
+  color: white;
+}
+
+.popover-body {
+  background-color: rgba(102, 101, 101, 0.565);
+  color: rgb(0, 0, 0);
+}
+
 .productos {
   color: white;
   font-size: 2rem;
