arreglos del index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "layout/titulos";
 
 // components
+@import "components/carrusel";
 @import "components/buttons";
 @import "components/tarjetas";
 
