--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,6 +2,9 @@
     text-decoration: none;
     list-style: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &__li a{
         text-decoration: none;
         color: black;
