--- a/scss/layout/_barranav.scss
+++ b/scss/layout/_barranav.scss
@@ -11,7 +11,7 @@
     flex-direction: row;
     justify-content: start;
     ul{
-        background-color: #a96521bf;
+        background-color: $color-marron;
         border-radius: 20px;
         li{
             padding-inline: 10px;
