--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,6 +4,7 @@
     border: 3px solid rgba(0, 0, 0, 0.54);
 }
 // cierre de btn barra de navegacion
+
 // btn de tarjeta
 .btnTarjeta{
     background-color:rgb(0, 0, 0);
@@ -24,5 +25,16 @@
 .popover-body{
     background-color: rgba(102, 101, 101, 0.565);
     color: rgb(0, 0, 0);
+}
+// cierre
+
+// btn formulario
+.btnform{
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: rgba(225, 85, 85, 0.615);
+    width: auto;
+    padding: 10px;
 }
 // cierre
