--- a/scss/layout/_logo.scss
+++ b/scss/layout/_logo.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+
+    &:hover {filter: opacity(.5);}
+    transition: 500ms;
 }
 @media(min-width:250px) and (max-width:576px){
     .logo{
@@ -12,7 +15,7 @@
         height: 60px;
     }
 }
-    .contenedorLogo{
+.contenedorLogo{
         display: flex;
         flex-direction: row;
         justify-content: center;
