--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,42 +1,31 @@
-.categoriasinicio {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 30px;
-}
-
-@media(min-width:250px) and (max-width:700px) {
-    main {
-        .categoriasinicio {
+main {
+    .categoriasinicio {
+        @include tarjeta-index() {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 50px;
-        }
 
         .tarjetainicio {
-            width: 300px;
-            height: 500px;
+            @include tarjeta-index__HandY;
         }
 
         .tarjetainicio-dos {
-            width: 300px;
-            height: 500px;
+            @include tarjeta-index__HandY;
         }
 
         .tarjetainicio-tres {
-            width: 300px;
-            height: 500px;
+            @include tarjeta-index__HandY;
         }
 
         .tarjetainicio-cuatro {
-            width: 300px;
-            height: 500px;
+            @include tarjeta-index__HandY;
         }
 
         .botontarjetainicio {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
+            height: auto;
         }
 
         .botontarjetainicio-dos {
@@ -46,36 +35,46 @@
     }
 }
 
-@media(min-width:576px) and (max-width:930px) {
-    main{
-        .categoriasinicio {
-            padding: 10px;
-            margin: 10px;
-        }
-        .tarjetainicio {
-            width: 290px;
-            height: 500px;
-        }
-        .tarjetainicio-dos {
-            width: 290px;
-            height: 500px;
-        }
-        .tarjetainicio-tres {
-            width: 290px;
-            height: 500px;
-        }
-        .tarjetainicio-cuatro {
-            width: 290px;
-            height: 500px;
-        }
-        .botontarjetainicio {
-            font-size: 1.3rem;
-        }
-        .botontarjetainicio-dos {
-            font-size: 1.3rem;
-            width: 200px;
+    & {
+            @include tarjeta-index__lg() {
+                padding: 10px;
+                margin: 10px;
+
+                .tarjetainicio {
+                    @include tarjeta-index__HandY(290px);
+                }
+
+                .tarjetainicio-dos {
+                    @include tarjeta-index__HandY(290px);
+                }
+
+                .tarjetainicio-tres {
+                    @include tarjeta-index__HandY(290px);
+                }
+
+                .tarjetainicio-cuatro {
+                    @include tarjeta-index__HandY(290px);
+                }
+
+                .botontarjetainicio {
+                    font-size: 1.3rem;
+                    height: auto;
+                }
+
+                .botontarjetainicio-dos {
+                    font-size: 1.3rem;
+                    width: 200px;
+                }
+            }
         }
     }
+
+
+.categoriasinicio {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 30px;
 }
 
 .tarjetainicio {
@@ -85,6 +84,7 @@
     width: 420px;
     border: 3px solid gray;
     align-items: center;
+
     a {
         display: flex;
         flex-direction: column;
@@ -103,6 +103,7 @@
     width: 200px;
     margin-block-end: 40px;
     font-family: 'Saira', sans-serif;
+
     &:hover {
         border: 5px solid rgb(255, 255, 255);
         color: white;
@@ -117,12 +118,13 @@
     width: 420px;
     border: 3px solid gray;
     align-items: center;
+
     a {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
-        
+
     }
 }
 
@@ -151,6 +153,7 @@
     width: 420px;
     border: 3px solid gray;
     align-items: center;
+
     a {
         display: flex;
         flex-direction: column;
