--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,40 +1,50 @@
 // btn de barra de navegacion
-.btnestilo{
-    background-color:$color-marron;
+.btnestilo {
+    background-color: $color-marron;
     border: 3px solid rgba(0, 0, 0, 0.54);
 }
+
 // cierre de btn barra de navegacion
 
 // btn de tarjeta
-.btnTarjeta{
-    background-color:rgb(0, 0, 0);
-    color :white;
+.btnTarjeta {
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
-.btnDeTarjetas{
+
+.btnDeTarjetas {
     background-color: $color-marron;
     height: 50px;
     width: 60%;
     border-radius: 15px;
     color: white;
-    
+
 }
-.popover-header{
-    background-color:$color-marron;
+
+.popover-header {
+    background-color: $color-marron;
     color: white;
 }
-.popover-body{
+
+.popover-body {
     background-color: rgba(102, 101, 101, 0.565);
     color: rgb(0, 0, 0);
 }
+
 // cierre
 
 // btn formulario
-.btnform{
+.btnform {
     color: white;
     font-size: 2rem;
     font-weight: bold;
     background-color: rgba(225, 85, 85, 0.615);
     width: auto;
     padding: 10px;
+    &:hover{
+        color:black;
+        background-color: rgba(225, 85, 85, 0.826);
+    }
 }
+
 // cierre
