--- a/scss/layout/_form.scss
+++ b/scss/layout/_form.scss
@@ -1,19 +1,20 @@
-
-form{
+form {
     color: white;
-    font-family: 'Saira', sans-serif;
-    & div h1{
+
+    & div h1 {
         align-items: center;
     }
 }
-.bg-color{
-    background : rgba(128, 128, 128, 0.49);
+
+.bg-color {
+    background: #8080807d;
     border-radius: 20px;
     padding: 10px;
 }
 
-.form-control{
-&:focus{
-    box-shadow: 0 0 0 .25rem rgba(204, 63, 63, 0.28);
+.form-control {
+    &:focus {
+        box-shadow: 0 0 0 .25rem rgba(204, 63, 63, 0.28);
+        border: rgba(225, 85, 85, 0.615);
     }
 }
