--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,9 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Saira", sans-serif;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
@@ -40,7 +42,6 @@ body {
 .barnav ul li a {
   color: white;
   padding: 10px;
-  font-family: "Saira", sans-serif;
   font-size: 1rem;
 }
 
@@ -90,20 +91,20 @@ body {
 }
 form {
   color: white;
-  font-family: "Saira", sans-serif;
 }
 form div h1 {
   align-items: center;
 }
 
 .bg-color {
-  background: rgba(128, 128, 128, 0.49);
+  background: rgba(128, 128, 128, 0.4901960784);
   border-radius: 20px;
   padding: 10px;
 }
 
 .form-control:focus {
   box-shadow: 0 0 0 0.25rem rgba(204, 63, 63, 0.28);
+  border: rgba(225, 85, 85, 0.615);
 }
 
 .logo {
@@ -146,7 +147,6 @@ form div h1 {
   background-color: rgba(2, 2, 2, 0.9);
   color: rgba(155, 148, 148, 0.907);
   font-size: 0.5em;
-  font-family: "Saira", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -171,12 +171,10 @@ form div h1 {
   color: white;
   background-color: rgba(22, 22, 22, 0.693);
   padding: 10px;
-  font-family: "Saira", sans-serif;
   border: 5px solid rgba(169, 101, 33, 0.7490196078);
 }
 
 .h2categoriasinicio {
-  font-family: "Saira", sans-serif;
   text-align: center;
   font-size: 2rem;
   color: white;
@@ -197,16 +195,16 @@ form div h1 {
 .textoh2 {
   text-align: center;
   color: white;
-  font-family: "Saira", sans-serif;
   background-color: rgba(169, 101, 33, 0.7490196078);
 }
 
 .imagenCarrusel {
-  height: 40vh;
+  height: auto;
+  object-fit: cover;
 }
 @media (min-width: 992px) {
   .imagenCarrusel {
-    height: 70vh;
+    height: 80vh;
   }
 }
 
@@ -246,11 +244,14 @@ form div h1 {
   width: auto;
   padding: 10px;
 }
+.btnform:hover {
+  color: black;
+  background-color: rgba(225, 85, 85, 0.826);
+}
 
 .productos {
   color: white;
   font-size: 2rem;
-  font-family: "Saira", sans-serif;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.244);
   margin-top: 20px;
@@ -259,7 +260,6 @@ form div h1 {
 
 .tarjproductos {
   background-color: gray;
-  font-family: "Saira", sans-serif;
   height: auto;
   border-radius: 5px;
 }
@@ -371,7 +371,6 @@ form div h1 {
   height: 60px;
   width: 200px;
   margin-block-end: 40px;
-  font-family: "Saira", sans-serif;
 }
 .botontarjetainicio:hover {
   border: 5px solid rgb(255, 255, 255);
@@ -403,7 +402,6 @@ form div h1 {
   height: auto;
   width: 300px;
   margin-block-end: 40px;
-  font-family: "Saira", sans-serif;
 }
 .botontarjetainicio-dos:hover {
   border: 5px solid rgb(255, 255, 255);
